--- a/src/main/resources/main/main.fxml
+++ b/src/main/resources/main/main.fxml
@@ -1,12 +1,47 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
-<GridPane fx:id="root" fx:controller="main.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-    <Button text="Open" onAction="#openFile"/>
-    <Button fx:id="changeButton" text="Change" onAction="#changeText"/>
-    <TextArea fx:id="textArea" GridPane.columnIndex="1">File Content</TextArea>
-</GridPane>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.control.Button?>
+<BorderPane fx:id="root" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/null" fx:controller="main.Controller">
+
+    <top>
+        <GridPane fx:id="mainButtons" alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1">
+            <Button fx:id="rightMerge" text="Copy to Left" GridPane.columnIndex="0"/>
+            <Button fx:id="compare" text="Compare" GridPane.columnIndex="2"/>
+            <Button fx:id="leftMerge" text="Copy to Right" GridPane.columnIndex="1"/>
+        </GridPane>
+    </top>
+    <center>
+        <GridPane fx:id="textGrid" alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1">
+            <BorderPane fx:id="leftBorder" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/null"
+                        GridPane.columnIndex="0">
+                <top>
+                    <GridPane fx:id="leftButtons" alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1">
+                        <Button fx:id="leftLoad" text="Load" GridPane.columnIndex="0"/>
+                        <Button fx:id="leftEdit" text="Edit" GridPane.columnIndex="1"/>
+                        <Button fx:id="leftSave" text="Save" GridPane.columnIndex="2"/>
+                    </GridPane>
+                </top>
+                <center>
+                    <TextArea fx:id="leftTextArea">File Content</TextArea>
+                </center>
+            </BorderPane>
+            <BorderPane fx:id="rightBorder" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/null"
+                        GridPane.columnIndex="1">
+                <top>
+                    <GridPane fx:id="rightButtons" alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1">
+                        <Button fx:id="rightLoad" text="Load" GridPane.columnIndex="0"/>
+                        <Button fx:id="rightEdit" text="Edit" GridPane.columnIndex="1"/>
+                        <Button fx:id="rightSave" text="Save" GridPane.columnIndex="2"/>
+                    </GridPane>
+                </top>
+                <center>
+                    <TextArea fx:id="rightTextArea">File Content</TextArea>
+                </center>
+            </BorderPane>
+        </GridPane>
+    </center>
+
+</BorderPane>
