--- a/src/main/resources/main/main.fxml
+++ b/src/main/resources/main/main.fxml
@@ -1,48 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<BorderPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/null" fx:controller="main.Controller">
-    <top>
-        <GridPane fx:id="mainButtons" alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1">
-            <Button fx:id="rightMerge" text="Copy to Left" GridPane.columnIndex="0"/>
-            <Button fx:id="compare" text="Compare" GridPane.columnIndex="2"/>
-            <Button fx:id="leftMerge" text="Copy to Right" GridPane.columnIndex="1"/>
-        </GridPane>
-    </top>
-    <center>
-        <GridPane fx:id="textGrid" alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1">
-            <BorderPane fx:id="leftBorder" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/null"
-                        GridPane.columnIndex="0">
-                <top>
-                    <HBox fx:id="leftHBox" spacing="10" alignment="center" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                        <Button fx:id="lefttLoad" text="Load" GridPane.columnIndex="0"/>
-                        <Button fx:id="leftEdit" text="Edit" GridPane.columnIndex="1"/>
-                        <Button fx:id="leftSave" text="Save" GridPane.columnIndex="2"/>
-                    </HBox>
-                </top>
-                <center>
-                    <TextArea fx:id="leftTextArea">File Content</TextArea>
-                </center>
-            </BorderPane>
-            <BorderPane fx:id="rightBorder" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/null"
-                        GridPane.columnIndex="1">
-                <top>
-                    <HBox fx:id="rightHBox" spacing="10" alignment="center" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                        <Button fx:id="rightLoad" text="Load" GridPane.columnIndex="0"/>
-                        <Button fx:id="rightEdit" text="Edit" GridPane.columnIndex="1"/>
-                        <Button fx:id="rightSave" text="Save" GridPane.columnIndex="2"/>
-                    </HBox>
-                </top>
-                <center>
-                    <TextArea fx:id="rightTextArea">File Content</TextArea>
-                </center>
-            </BorderPane>
-        </GridPane>
-    </center>
-
-</BorderPane>
+<AnchorPane fx:id="root" prefHeight="400" prefWidth="800" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.Controller">
+   <children>
+      <ToolBar prefHeight="40.0" prefWidth="800.0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
+        <items>
+            <Button fx:id="leftMerge" mnemonicParsing="false" text="Copy to Left" />
+            <Button fx:id="compare" mnemonicParsing="false" text="Compare" />
+            <Button fx:id="rightMerge" mnemonicParsing="false" text="Copy to Right" />
+        </items>
+      </ToolBar>
+       <SplitPane fx:id="splitPane" dividerPositions="0.5" AnchorPane.topAnchor="40" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
+           <AnchorPane fx:id="leftText">
+               <ButtonBar prefHeight="40.0" prefWidth="300.0" AnchorPane.topAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
+                   <buttons>
+                       <Button fx:id="leftLoad" mnemonicParsing="false" text="Load" textAlignment="CENTER" ButtonBar.buttonData="LEFT" />
+                       <Button fx:id="leftEdit" mnemonicParsing="false" text="Edit" textAlignment="CENTER" ButtonBar.buttonData="CANCEL_CLOSE" />
+                       <Button fx:id="leftSave" mnemonicParsing="false" text="Save" textAlignment="CENTER" ButtonBar.buttonData="RIGHT" />
+                   </buttons>
+               </ButtonBar>
+               <TextArea prefHeight="310.0" prefWidth="360.0" AnchorPane.topAnchor="40" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"/>
+           </AnchorPane>
+           <AnchorPane fx:id="rightText">
+               <ButtonBar prefHeight="40.0" prefWidth="300.0" AnchorPane.topAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
+                   <buttons>
+                       <Button fx:id="rightLoad" mnemonicParsing="false" text="Load" ButtonBar.buttonData="LEFT" />
+                       <Button fx:id="rightEdit" mnemonicParsing="false" text="Edit" ButtonBar.buttonData="CANCEL_CLOSE" />
+                       <Button fx:id="rightSave" mnemonicParsing="false" text="Save" ButtonBar.buttonData="RIGHT" />
+                   </buttons>
+               </ButtonBar>
+               <TextArea prefHeight="310.0" prefWidth="360.0" AnchorPane.topAnchor="40" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"/>
+           </AnchorPane>
+       </SplitPane>
+   </children>
+</AnchorPane>
