--- a/src/main/resources/main/main.fxml
+++ b/src/main/resources/main/main.fxml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import org.fxmisc.richtext.CodeArea?>
 <AnchorPane fx:id="root" prefHeight="400" prefWidth="800" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.Controller">
     <children>
         <ToolBar prefHeight="40.0" prefWidth="800.0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
@@ -25,7 +21,7 @@
                         <Button fx:id="leftSave" mnemonicParsing="false" text="Save" textAlignment="CENTER" ButtonBar.buttonData="RIGHT" />
                     </buttons>
                 </ButtonBar>
-                <TextArea fx:id="leftView" prefHeight="310.0" prefWidth="360.0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="40" />
+                <CodeArea fx:id="leftView" prefHeight="310.0" prefWidth="360.0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="40" />
             </AnchorPane>
             <AnchorPane fx:id="rightText">
                 <ButtonBar prefHeight="40.0" prefWidth="300.0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
@@ -35,7 +31,7 @@
                         <Button fx:id="rightSave" mnemonicParsing="false" text="Save" ButtonBar.buttonData="RIGHT" />
                     </buttons>
                 </ButtonBar>
-                <TextArea fx:id="rightView" prefHeight="310.0" prefWidth="360.0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="40" />
+                <CodeArea fx:id="rightView" prefHeight="310.0" prefWidth="360.0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="40" />
             </AnchorPane>
         </SplitPane>
     </children>
