--- a/src/main/resources/SimpleMerge/control/text_editor.fxml
+++ b/src/main/resources/SimpleMerge/control/text_editor.fxml
@@ -3,11 +3,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SimpleMerge.TextEditorController">
     <children>
        <ButtonBar prefHeight="40.0">
             <buttons>
-                <Button fx:id="load" mnemonicParsing="false" onAction="#onLoadButtonClick" text="Load"></Button>
+                <Button fx:id="load" mnemonicParsing="false" onAction="#onLoadButtonClick" text="Load" ></Button>
                 <Button fx:id="edit" mnemonicParsing="false" onAction="#onEditButtonClick" text="Edit"></Button>
                 <Button fx:id="save" mnemonicParsing="false" onAction="#onSaveButtonClick" text="Save"></Button>
             </buttons>
