--- a/src/main/resources/SimpleMerge/control/text_editor.fxml
+++ b/src/main/resources/SimpleMerge/control/text_editor.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import org.fxmisc.richtext.InlineCssTextArea?>
 <fx:root type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SimpleMerge.TextEditorController">
     <children>
        <ButtonBar prefHeight="40.0">
@@ -12,6 +13,6 @@
                 <Button fx:id="save" mnemonicParsing="false" onAction="#onSaveButtonClick" text="Save"></Button>
             </buttons>
         </ButtonBar>
-        <TextArea fx:id="textArea" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="40" />
+        <InlineCssTextArea fx:id="textArea" disable="true" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="40" />
     </children>
 </fx:root>
