--- a/src/main/resources/SimpleMerge/main.fxml
+++ b/src/main/resources/SimpleMerge/main.fxml
@@ -10,7 +10,7 @@
         <ToolBar prefHeight="40.0" prefWidth="800.0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
             <items>
                 <Button fx:id="leftMerge" disable="true" mnemonicParsing="false" text="Copy to Left" />
-                <Button fx:id="compare" disable="true" mnemonicParsing="false" text="Compare" />
+                <Button fx:id="compare" disable="true" mnemonicParsing="false" text="Compare" onAction="#compare" />
                 <Button fx:id="rightMerge" disable="true" mnemonicParsing="false" text="Copy to Right" />
             </items>
         </ToolBar>
