--- a/src/main/resources/SimpleMerge/control/edit_panel.fxml
+++ b/src/main/resources/SimpleMerge/control/edit_panel.fxml
@@ -6,14 +6,15 @@
 <?import org.fxmisc.richtext.InlineCssTextArea?>
 <fx:root type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-       <ButtonBar prefHeight="40.0">
+        <Label fx:id="pathLabel"></Label>
+        <ButtonBar prefHeight="40.0">
             <buttons>
-                <Button fx:id="load" mnemonicParsing="false" text="Load" onMouseReleased="#onLoadButtonClick" ></Button>
+                <Button fx:id="load" mnemonicParsing="false" text="Load" onMouseReleased="#onLoadButtonClick"></Button>
                 <Button fx:id="edit" mnemonicParsing="false" onAction="#onEditButtonClick" text="Edit"></Button>
                 <Button fx:id="save" mnemonicParsing="false" onAction="#onSaveButtonClick" text="Save"></Button>
             </buttons>
         </ButtonBar>
-        <Label fx:id="pathLabel"></Label>
-        <InlineCssTextArea fx:id="textArea" disable="true" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="40" />
+        <InlineCssTextArea fx:id="textArea" disable="true" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"
+                           AnchorPane.topAnchor="40"/>
     </children>
 </fx:root>
