--- a/src/main/resources/SimpleMerge/control/edit_panel.fxml
+++ b/src/main/resources/SimpleMerge/control/edit_panel.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import org.fxmisc.richtext.InlineCssTextArea?>
-<fx:root type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root xmlns:fx="http://javafx.com/fxml/1" type="javafx.scene.layout.VBox">
     <children>
         <Label fx:id="pathLabel"></Label>
         <ButtonBar prefHeight="40.0">
